tests/NormalTests/paczka1/small_fuzzy/71563717.err
Error in line 1: dcj S578 84,2
Error in line 6: OyEX S578 88,6
